force-app/main/default/objects/Alliance_Partner_Profile__c/Alliance_Partner_Profile__c.object-meta.xml
<CustomObject>
    <description>Object to be used for companies we Integrate, Data Share, or work with in a no customer capacity</description>
    <label>Alliance Partner Profile</label>
    <nameField>
        <displayFormat>APS-{0000}</displayFormat>
        <label>Alliance Partner Profile</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alliance Partner Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>