force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Approved_Data_Share_Products__c.field-meta.xml
<CustomField>
    <fullName>Approved_Data_Share_Products__c</fullName>
    <label>Approved Data Share Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Big Data Data Share</fullName>
            </value>
            <value>
                <fullName>GPS Data Share</fullName>
            </value>
            <value>
                <fullName>HOS Data Share</fullName>
            </value>
            <value>
                <fullName>Integration Partner</fullName>
            </value>
            <value>
                <fullName>VLV Data Share</fullName>
            </value>
            <value>
                <fullName>Work Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>