force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Are_They_a_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Are_They_a_Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Owned by Strategic Alliance Team (Matt Martinez &amp; Joe Vastine)</description>
    <label>Are They a Competitor?</label>
    <type>Checkbox</type>
</CustomField>