force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Competitive_Products_Offered__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Products_Offered__c</fullName>
    <description>Owned by Strategic Alliance Team (Matt Martinez &amp; Joe Vastine)</description>
    <inlineHelpText>What competitive products do they offer? Please select from this list.</inlineHelpText>
    <label>Competitive Products Offered?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical Event Video</fullName>
            </value>
            <value>
                <fullName>Data Plan</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Active Driver Coach</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Critical Event Video</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Customer Portal</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Driver Workflow</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Exact Fuel</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Extended Fault Monitoring</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Extended Productivity (BlueDot)</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Fault Monitoring</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Fuel Tax Automation</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – In-Cab Printing</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – In-Cab Scanning</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Media Manager</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Mobile Apps</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Mobile Data Capture</fullName>
            </value>
            <value>
                <fullName>Enterprise Services - Mobile Hours of Service</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Per Diem Manager</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Services Portal</fullName>
            </value>
            <value>
                <fullName>Enterprise Services - Support Portal</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Tire Inflation Alerts</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Tire Pressure Monitoring</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Trailer ID</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Trip Manager</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Vehicle Inspection Reports</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Web Browser</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Weigh Station Bypass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>