force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Competitive_Risk__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Risk__c</fullName>
    <label>Competitive Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High - Direct Competitor</fullName>
            </value>
            <value>
                <fullName>Medium - Linked to Direct Competitor</fullName>
            </value>
            <value>
                <fullName>Low - Sale of Similar products</fullName>
            </value>
            <value>
                <fullName>No Competitive Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>