force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Competitor_Link__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Link</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Alliance Partner Profiles</relationshipLabel>
    <relationshipName>Alliance_Partner_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>