force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Complimentary_Products_Offered__c.field-meta.xml
<CustomField>
    <fullName>Complimentary_Products_Offered__c</fullName>
    <description>Owned by Strategic Alliance Team (Matt Martinez &amp; Joe Vastine)</description>
    <inlineHelpText>What complimentary products do they offer? Please list.</inlineHelpText>
    <label>Complimentary Products Offered?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>