force-app/main/default/objects/Alliance_Partner_Profile__c/fields/D_B_Financial_Strength_Indicator__c.field-meta.xml
<CustomField>
    <fullName>D_B_Financial_Strength_Indicator__c</fullName>
    <description>Owned by Strategic Alliance Team (Matt Martinez &amp; Joe Vastine) Dun &amp; Bradstreet Financial rating.</description>
    <inlineHelpText>Pulled directly from Dun  &amp; Bradstreet, this field indicates the size of the company and is based on net worth, issued capital or number of employees. It is based on a company&apos;s tangible net worth derived from the latest financial accounts.</inlineHelpText>
    <label>D &amp; B Financial Strength Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5A</fullName>
            </value>
            <value>
                <fullName>4A</fullName>
            </value>
            <value>
                <fullName>3A</fullName>
            </value>
            <value>
                <fullName>2A</fullName>
            </value>
            <value>
                <fullName>1A</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>FF</fullName>
            </value>
            <value>
                <fullName>GG</fullName>
            </value>
            <value>
                <fullName>HH</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>