force-app/main/default/objects/Alliance_Partner_Profile__c/fields/D_B_Risk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>D_B_Risk_Indicator__c</fullName>
    <description>Owned by Strategic Alliance Team (Matt Martinez &amp; Joe Vastine)</description>
    <inlineHelpText>Dun &amp; Bradstreet rating that estimates overall credit standing of the company or predicts the likelihood of failure.</inlineHelpText>
    <label>D &amp; B Risk Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>