force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Description_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Relationship__c</fullName>
    <label>Description of Relationship</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>