force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Has_Pending_Legal_Action_18_months__c.field-meta.xml
<CustomField>
    <fullName>Has_Pending_Legal_Action_18_months__c</fullName>
    <description>Owned by Strategic Alliance Team (Matt Martinez &amp; Joe Vastine)</description>
    <inlineHelpText>Does this company have any pending Legal action against them (in the past 18-months)? Please describe.</inlineHelpText>
    <label>Has Pending Legal Action (18-months)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>