force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Industry_Perception__c.field-meta.xml
<CustomField>
    <fullName>Industry_Perception__c</fullName>
    <description>Owned by Strategic Alliance Team (Matt Martinez &amp; Joe Vastine)</description>
    <inlineHelpText>How are they perceived in the Industry?</inlineHelpText>
    <label>Industry Perception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>