force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Is_Their_Leadership_Stable__c.field-meta.xml
<CustomField>
    <fullName>Is_Their_Leadership_Stable__c</fullName>
    <description>Owned by Strategic Alliance Team (Matt Martinez &amp; Joe Vastine)</description>
    <label>Is Their Leadership Stable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>