force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Partnership_Benefits_to_Omnitracs__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Benefits_to_Omnitracs__c</fullName>
    <label>Partnership Benefits to Omnitracs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>