force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Partnership_Risks_if_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Risks_if_Accepted__c</fullName>
    <label>Partnership Risks, if Accepted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>