force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Wiki_Access2__c.field-meta.xml
<CustomField>
    <fullName>Wiki_Access2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wiki Access</label>
    <type>Checkbox</type>
</CustomField>