force-app/main/default/objects/Alliance_Partner_Profile__c/fields/Wiki_Access__c.field-meta.xml
<CustomField>
    <fullName>Wiki_Access__c</fullName>
    <formula>Account__r.Wiki_Access__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wiki Access?</label>
    <type>Checkbox</type>
</CustomField>